--- a/index.html
+++ b/index.html
@@ -1,87 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./main.css">
-  <link rel="stylesheet" href="./mainQ.css">
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-/>
-</head>
-<body>
-  <div class="container">
-    <div class="dropdown">
-      <button class="dropdown-toggle">Buttons</button>
-      <div class="dropdown-menu">
-        <button onclick="undo_last()" class="btn">UNDO</button>
-        <button onclick="clear_canvas()" class="btn">CLEAR</button>
-        <button id="saveBtn">SAVE <i class="bi bi-download"></i></button>
-      </div>
-    </div>
-    <div class="dropdown-2">
-      <button class="dropdown-toggle-2">Shapes</button>
-      <div class="dropdown-menu-2">
-        <button><i class="bi bi-square"></i></button>
-        <button><i class="bi bi-circle"></i></button>
-        <button><i class="bi bi-triangle"></i></button>
-      </div>
-    </div>
-    <div>
-      <div class="brush"><i class="bi bi-brush"></i></div>
-      <select id="thickness">
-        <option>2</option>
-        <option>7</option>
-        <option>13</option>
-        <option>18</option>
-        <option>23</option>
-        <option>32</option>
-        <option>42</option>
-        <option>54</option>
-        <option>64</option>
-        <option>72</option>
-      </select>
-      <div>
-        <h2 id="textarea">A</h2>
-      </div>
-    </div>
-    <div class="colors">
-      <div>
-        <div class="first_row">
-          <div onclick="change_color(this)" style="background: red"></div>
-          <div onclick="change_color(this)" style="background: blue"></div>
-          <div onclick="change_color(this)" style="background: yellow"></div>
-          <div onclick="change_color(this)" style="background: green"></div>
-          <div onclick="change_color(this)" style="background: brown"></div>
-        </div>
-        <div class="second_row">
-          <div onclick="change_color(this)" style="background: rgb(0, 247, 255)"></div>
-          <div onclick="change_color(this)" style="background: rgb(255, 0, 204)"></div>
-          <div onclick="change_color(this)" style="background: rgb(255, 0, 89)"></div>
-          <div onclick="change_color(this)" style="background: rgb(252, 135, 0)"></div>
-          <div onclick="change_color(this)" style="background: rgb(204, 0, 255)"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./mainQ.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="dropdown">
+        <button class="dropdown-toggle">Buttons</button>
+        <div class="dropdown-menu">
+          <button onclick="undo_last()" class="btn">UNDO</button>
+          <button onclick="clear_canvas()" class="btn">CLEAR</button>
+          <button id="saveBtn">SAVE <i class="bi bi-download"></i></button>
         </div>
       </div>
-      <input
-        oninput="initial_color = this.value"
-        type="color"
-        id="color_picker"
-      />
+      <div class="dropdown-2">
+        <button class="dropdown-toggle-2">Shapes</button>
+        <div class="dropdown-menu-2">
+          <button id="square" class="tool"><i class="bi bi-square"></i></button>
+          <button id="circle" class="tool"><i class="bi bi-circle"></i></button>
+          <button id="triangle" class="tool"><i class="bi bi-triangle"></i></button>
+          <div>
+            <label for="fill">Fill</label>
+            <input type="checkbox" id="fill" />
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="active tool" id="brush"><i class="bi bi-brush"></i></div>
+        <div class="tool" id="eraser"><i class="bi bi-eraser"></i></div>
+
+        <select id="thickness">
+          <option>2</option>
+          <option>7</option>
+          <option>13</option>
+          <option>18</option>
+          <option>23</option>
+          <option>32</option>
+          <option>42</option>
+          <option>54</option>
+          <option>64</option>
+          <option>72</option>
+        </select>
+        <div></div>
+      </div>
+      <div class="colors">
+        <div>
+          <div class="first_row">
+            <div onclick="change_color(this)" style="background: red"></div>
+            <div onclick="change_color(this)" style="background: blue"></div>
+            <div onclick="change_color(this)" style="background: yellow"></div>
+            <div onclick="change_color(this)" style="background: green"></div>
+            <div onclick="change_color(this)" style="background: brown"></div>
+          </div>
+          <div class="second_row">
+            <div
+              onclick="change_color(this)"
+              style="background: rgb(0, 247, 255)"
+            ></div>
+            <div
+              onclick="change_color(this)"
+              style="background: rgb(255, 0, 204)"
+            ></div>
+            <div
+              onclick="change_color(this)"
+              style="background: rgb(255, 0, 89)"
+            ></div>
+            <div
+              onclick="change_color(this)"
+              style="background: rgb(252, 135, 0)"
+            ></div>
+            <div
+              onclick="change_color(this)"
+              style="background: rgb(204, 0, 255)"
+            ></div>
+          </div>
+        </div>
+        <input
+          oninput="initial_color = this.value"
+          type="color"
+          id="color_picker"
+        />
+      </div>
+      <div class="theme">
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round">
+            <i class="bi bi-moon"></i>
+            <i class="bi bi-sun"></i>
+          </span>
+        </label>
+      </div>
     </div>
-    <div class="theme">
-      <label class="switch">
-        <input type="checkbox" />
-        <span class="slider round">
-          <i class="bi bi-moon"></i>
-          <i class="bi bi-sun"></i>
-        </span>
-      </label>
-    </div>
-  </div>
-  <canvas id="canvas"></canvas>
-  <script src="./main.js"></script>
-</body>
+    <canvas id="canvas"></canvas>
+    <script src="./main.js"></script>
+  </body>
 </html>
