--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <div class="dropdown-2">
         <button class="dropdown-toggle-2">Shapes</button>
         <div class="dropdown-menu-2">
-          <button id="square" class="tool"><i class="bi bi-square"></i></button>
-          <button id="circle" class="tool"><i class="bi bi-circle"></i></button>
-          <button id="triangle" class="tool"><i class="bi bi-triangle"></i></button>
+          <button id="square"><i class="bi bi-square"></i></button>
+          <button id="circle"><i class="bi bi-circle"></i></button>
+          <button id="triangle"><i class="bi bi-triangle"></i></button>
           <div>
-            <label for="fill">Fill</label>
+            <label for="fill">fill</label>
             <input type="checkbox" id="fill" />
           </div>
         </div>
