--- a/test.html
+++ b/test.html
@@ -4,95 +4,102 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grade Checking App</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Document</title>
   </head>
   <style>
-    body {
-      background-color: azure;
+    .toggle-container {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
     }
-    .input {
-      width: 9rem;
-    }
-    h1 {
-      font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-      color: indianred;
-      font-size: 100px;
-    }
-    label {
-      font-family: "Times New Roman", Times, serif;
-      font-size: 50px;
-    }
-    input {
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
 
-      font-size: 50px;
-      border-radius: 25px;
-      border-color: rgb(253, 7, 7);
+    .toggle-input {
+      display: none;
     }
-    button {
-      font-size: 30px;
-      border-radius: 25px;
-      padding: 10px;
-      background-color: black;
-      color: white;
-      font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+
+    .toggle-label {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      background-color: #bababa;
+      border-radius: 34px;
+      transition: background-color 0.2s ease;
     }
-    #gradeResult {
-      font-size: 50px;
-      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
-      color: chocolate;
+
+    .toggle-label:before {
+      content: "";
+      position: absolute;
+      top: 5px;
+      left: 5px;
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      background-color: #fff;
+      transition: transform 0.2s ease;
+    }
+
+    .toggle-input:checked + .toggle-label {
+      background-color: #000000;
+    }
+
+    .toggle-input:checked + .toggle-label:before {
+      transform: translateX(26px);
+    }
+
+    .toggle-button {
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 28px;
+      height: 28px;
+      border-radius: 50%;
+      background-color: #fff;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+      transition: transform 0.2s ease;
+    }
+
+    .toggle-input:checked + .toggle-label + .toggle-button {
+      transform: translateX(26px);
+      background-color: #ffffff;
+    }
+    .toggle-container i {
+      position: absolute;
+      top: 6px;
+      left: 6px;
+      font-size: 1.2rem;
+      color: #fff;
     }
   </style>
+
   <body>
-    <h1>Grade Checking App</h1>
-    <div class="background-image"></div>
-    <form onsubmit="Gradecheck();return false">
-      <label for="percentage">Enter Your Percentage : </label>
-      <input
-        class="input"
-        type="number"
-        id="percentage"
-        placeholder="here"
-        step="0.0001"
-        required
-      />
-      <p>
-        
-        <button type="submit">Submit</button>
-      </p>
-    </form>
-    <p id="gradeResult"></p>
+    <div class="toggle-container">
+      <input type="checkbox" id="toggle" class="toggle-input" />
+      <label for="toggle" class="toggle-label"></label>
+      <div class="toggle-button"></div>
+      <i class="bi bi-moon"></i>
+      <i class="bi bi-sun"></i>
+    </div>
 
     <script>
-      function Gradecheck() {
-        let percentage = parseFloat( document.getElementById(`percentage`).value).toFixed(2);
-        alert(percentage)
-        let grade = "";
+      const toggle = document.getElementById("toggle");
+      const body = document.body;
+      // const button = document.button;
 
-        switch (true) {
-          case percentage >= 90 && percentage <= 100:
-            grade = "A";
-            break;
-          case percentage >= 80 && percentage < 90:
-            grade = "B";
-            break;
-          case percentage >= 70 && percentage < 80:
-            grade = "C";
-            break;
-          case percentage >= 60 && percentage < 70:
-            grade = "D";
-            break;
-          default:
-            grade = "F";
+      toggle.addEventListener("change", (e) => {
+        if (e.target.checked) {
+          body.classList.add("dark-mode");
+          body.style.cssText =
+            "transition: .5s; background-color: Black; color: white;";
+        } else {
+          body.classList.remove("dark-mode");
+          body.style.cssText =
+            "transition: .5s; background-color: white; color: black;";
         }
-
-        console.log("Grade:", grade);
-
-        document.getElementById(`gradeResult`).textContent = `Grade : ${grade}`;
-      }
+      });
     </script>
   </body>
 </html>
